# splitty

./: .gitignore  README  pyproject.toml  schema.sql
app/: dependencies.py  main.py
app/routers/: auth.py  expenses.py  groups.py  settlements.py  users.py
app/schemas/: auth.py  common.py  receipts.py  users.py
design_docs/: API design.md  Design overview.md  Draft data model.md  Engineering plan.md  dev_notes.md
design_docs/ui/: HANDOFF.md  wireframes.html
splitty_app/: app.json  package-lock.json  package.json
splitty_app/api/: client.ts  expenses.ts  groups.ts
splitty_app/app/: _layout.tsx  index.tsx
splitty_app/app/expense/: ExpenseFormContext.tsx  [groupId].tsx  _layout.tsx  items.tsx  paid-by.tsx  split.tsx
splitty_app/app/groups/: [id].tsx  index.tsx
splitty_app/components/: Avatar.tsx
splitty_app/constants/: colors.ts  config.ts  mockData.ts
splitty_server/: pyproject.toml
splitty_server/app/routers/: auth.py  expenses.py  receipts.py  settlements.py  users.py
splitty_server/app/schemas/: expenses.py  groups.py
splitty_server/db/: recreate_db.sh  schema.sql  test_data.sql
splitty_server/tests/: api_helpers.py  conftest.py  factories.py  test_expenses.py  test_groups.py
tests/: api_helpers.py  conftest.py  test_balances.py  test_expenses.py
